remove Math.clamp usage